hphp/test/zend/bad/ext-spl/ArrayObject_unserialize_empty_string.php
<?php
$a = new ArrayObject(array());
$a->unserialize("");
?>